--- a/NHN/css/notice1.css
+++ b/NHN/css/notice1.css
@@ -16,7 +16,6 @@ table{width: 700px;margin: 0 auto;top:20px;position: relative;border-bottom: 2px
 
 table > thead > tr >th{text-align: left;font-size: 30px;}
 .font_1{font-size: 20px;font-weight: bold;color: black;}
-}
 tbody > tr{width: 700px;}
 tbody > tr > td > p{line-height: 40px;color: gray;}
 #line_1{border-top: 0.5px solid gray;}
@@ -24,3 +23,6 @@ tbody > tr > td > p{line-height: 40px;color: gray;}
 .box_1{float: right;width: 800px;height: 750px;}
 .number_1{width: 30px;height: 30px;background: black;text-align: center;color: white;line-height: 30px;margin: 0 auto;}
 .graybox{width: 280px;background: #dbd6d6;height: 35px;line-height: 35px;margin: 0 auto;position: relative;top: 10px;border: 1px solid #b5b5b5;}
+.N_footer{width: 800px;height: 80px;float: right;background: #f1f1f1;border-bottom: 1px solid #cccccc;border-top: 1px solid #cccccc;
+color: #b3b3b3;font-size: 10px;text-align: right;line-height: 40px;}
+span{font-weight: bold;color: red;}
