--- a/chan1/index.css
+++ b/chan1/index.css
@@ -17,10 +17,16 @@ input{color: #444444;width: 150px;height: 32px;float: left;border: #EFEFEF 1px s
 nav{width: 800px;height: 40px;margin: 0 auto;}
 nav > ul{float: left;}
 nav > ul > li > a{font-weight: bold;}
-nav > ul > li > a:hover{color: #7bc9dd;}
-nav > ul > li > a:hover > ul{color: #7bc9dd;border: 1px solid #7bc9dd;overflow: visible;}
-nav > ul > li > a:hover > ul > li{height: 100px;}
+nav > ul > li > ul > li > a:hover{color: #7bc9dd;font-weight: bold;}
+nav > ul > li:hover > ul > li{height: 41px;}
+nav > ul > li:hover > ul {border: #7bc9dd 1px solid;}
 nav > ul > li{width: 100px;height: 41px;float: left;line-height: 41px;text-align: center;}
-nav > ul > li > ul{width: 120px;font-size: 13px;text-align: left;height: 0px;overflow: hidden;}
-nav > ul > li > ul > li{width: 100px;margin-left: 20px;}
+nav > ul > li > ul{width: 120px;font-size: 13px;text-align: left;}
+nav > ul > li > ul > li{width: 100px;margin-left: 20px;height: 0px;overflow: hidden;}
 nav > ul > li > ul > li > a{color: #444444;}
+
+.content_wrap{width: 1000px;height: 600px;}
+.slide_box{width: 1000px;height: 400px;overflow: hidden;position: relative;margin-top: 10px;}
+.slide_box > li{height: 400px;width: 1000px;position: absolute;left: -1000px;}
+.slide_box > li > img{width: 1000px;height: 400px;position: absolute}
+.slide_box > li:first-child{left: 0;}
