--- a/chan1/index.css
+++ b/chan1/index.css
@@ -45,5 +45,8 @@ nav > ul > li > ul > li > a{color: #444444;}
 #pop_box > li:first-child {left: 0;}
 #pop_box > li > img{width: 280px;height: 400px;}
 #pop_box > li > a > img {width: 280px;height: 400px;}
-
-
+.del_box {width: 100%;height: 100%;position: absolute;z-index: 2;text-align: center;display: none;}
+.del_box img {width: 380px;height: 500px;}
+.del{width: 20px;height: 20px;background-color: #e2e2e2;position: relative;border:#b3b3b3; float: right;top: 20px;}
+.del>a{color: #ffffff}
+.del2{width: 380px;height: 500px;margin-top: 200px;margin: 0 auto;margin-top: 250px;}
