--- a/chan1/index.css
+++ b/chan1/index.css
@@ -39,15 +39,16 @@ nav > ul > li > ul > li > a{color: #444444;}
 .table_1 > thead > tr > .plus_view > a{font-size: 12px;color: #444444;}
 .table_1 > thead > tr > th {width: 100px;float: left;}
 .table_1 > thead > tr > th > a{font-size: 18px;color: black;}
-.table_1 > tbody > tr > td > a{font-size: 14px;margin-left: 15px;}
+.table_1 > tbody > tr > td > a{font-size: 14px;}
 
 #h_t{width: 700px;height: 200px;display: none;position: absolute}
+
 #pop_box{width: 280px;height: 400px;float: left;margin-top: 10px;overflow: hidden;margin-left: 5px;position: relative;}
 #pop_box > li {width: 280px;height: 400px; left: -280px;position: absolute;}
 #pop_box > li:first-child {left: 0;}
 #pop_box > li > img{width: 280px;height: 400px;}
 #pop_box > li > a > img {width: 280px;height: 400px;}
-.del_box {width: 100%;height: 100%;position: absolute;z-index: 2;text-align: center;display: none;}
+.del_box {width: 100%;height: 100%;position: absolute;z-index: 3;text-align: center;display: none;}
 .del_box img {width: 380px;height: 500px;}
 .del{width: 20px;height: 20px;background-color: #e2e2e2;position: relative;border:#b3b3b3; float: right;top: 20px;}
 .del>a{color: #ffffff}
