--- a/chan1/index.css
+++ b/chan1/index.css
@@ -28,7 +28,7 @@ nav > ul > li > ul > li{width: 100px;margin-left: 20px;height: 0px;overflow: hid
 nav > ul > li > ul > li > a{color: #444444;}
 
 .table_all{width: 700px;height: 200px;border:1px solid #e2e2e2;margin-top: 10px;float: left;margin-left: 5px;}
-.content_wrap{width: 1000px;height: 600px;}
+.content_wrap{width: 1000px;height: 800px;}
 .slide_box{width: 1000px;height: 300px;overflow: hidden;position: relative;margin-top: 10px;}
 .slide_box > li{height: 300px;width: 1000px;position: absolute;left: -1000px;}
 .slide_box > li > img{width: 1000px;height: 300px;position: absolute;}
@@ -43,14 +43,16 @@ nav > ul > li > ul > li > a{color: #444444;}
 
 #h_t{width: 700px;height: 200px;display: none;position: absolute}
 
-#pop_box{width: 280px;height: 400px;float: left;margin-top: 10px;overflow: hidden;margin-left: 5px;position: relative;}
-#pop_box > li {width: 280px;height: 400px; left: -280px;position: absolute;}
+#pop_box{width: 285px;height: 450px;float: right;margin-top: 10px;overflow: hidden;position: relative;border: 1px solid #e2e2e2;}
+#pop_box > li {width: 285px;height: 450px; left: -285px;position: absolute;}
 #pop_box > li:first-child {left: 0;}
-#pop_box > li > img{width: 280px;height: 400px;}
-#pop_box > li > a > img {width: 280px;height: 400px;}
+#pop_box > li > img{width: 285px;height: 450px;}
+#pop_box > li > a > img {width: 285px;height: 450px;}
 .del_box {width: 100%;height: 100%;position: absolute;z-index: 3;text-align: center;display: none;}
 .del_box img {width: 380px;height: 500px;}
 .del{width: 20px;height: 20px;background-color: #e2e2e2;position: relative;border:#b3b3b3; float: right;top: 20px;}
 .del>a{color: #ffffff}
 .del2{width: 380px;height: 500px;margin-top: 200px;margin: 0 auto;margin-top: 250px;}
 #th_color1{color: #4d87ef;}
+.right{font-size: 14px;text-align: center;}
+.calender{float: left;width: 200px;height: 200px; background: beige;margin-top: 10px;}
