--- a/chan1/index.css
+++ b/chan1/index.css
@@ -43,11 +43,11 @@ nav > ul > li > ul > li > a{color: #444444;}
 
 #h_t{width: 700px;height: 200px;display: none;position: absolute}
 
-#pop_box{width: 285px;height: 450px;float: right;margin-top: 10px;overflow: hidden;position: relative;border: 1px solid #e2e2e2;}
-#pop_box > li {width: 285px;height: 450px; left: -285px;position: absolute;}
+#pop_box{width: 285px;height: 412px;float: right;margin-top: 10px;overflow: hidden;position: relative;border: 1px solid #e2e2e2;}
+#pop_box > li {width: 285px;height: 412px; left: -285px;position: absolute;}
 #pop_box > li:first-child {left: 0;}
-#pop_box > li > img{width: 285px;height: 450px;}
-#pop_box > li > a > img {width: 285px;height: 450px;}
+#pop_box > li > img{width: 285px;height: 412px;}
+#pop_box > li > a > img {width: 285px;height: 412px;}
 .del_box {width: 100%;height: 100%;position: absolute;z-index: 3;text-align: center;display: none;}
 .del_box img {width: 380px;height: 500px;}
 .del{width: 20px;height: 20px;background-color: #e2e2e2;position: relative;border:#b3b3b3; float: right;top: 20px;}
@@ -55,4 +55,21 @@ nav > ul > li > ul > li > a{color: #444444;}
 .del2{width: 380px;height: 500px;margin-top: 200px;margin: 0 auto;margin-top: 250px;}
 #th_color1{color: #4d87ef;}
 .right{font-size: 14px;text-align: center;}
-.calender{float: left;width: 200px;height: 200px; background: beige;margin-top: 10px;}
+
+.gallery{float: left;width: 700px;height: 200px; margin-top: 10px;margin-left: 5px;}
+.calender{float: left;width: 343px;height: 200px; border:1px solid #e2e2e2;}
+.c_t{width: 343px;height: 40px;}
+.c_year_date{font-size: 13px;color: #a5a5a5;}
+.c_t > p{text-align: center;font-weight: bold;}
+.right_b{float: right;color: #4d87ef;font-weight: bold;font-size: 24px;line-height: 15px}
+.c_m{width: 270px;height: 120px;text-align: center;margin: 0 auto;}
+.l_box{float:left;width: 80px;height: 120px;line-height: 120px;}
+.m_box{float:left;width: 110px;height: 120px;color: #4d87ef;font-size: 90px;line-height: 120px;text-align: center;}
+.r_box{float:left;width: 80px;height: 120px;line-height: 120px;}
+.c_f{width: 343px;height: 42px;font-size: 13px;line-height: 20px;}
+.c_f > p{margin-left: 10px;}
+#b_b{border-bottom: 1px solid #e2e2e2;}
+.lunch{float: left;width: 343px;height: 200px; border:1px solid #e2e2e2;margin-left: 10px;}
+.button{cursor: pointer;font-size:25px;color: #b3b3b3;}
+.button:hover{color: #4d87ef;}
+#m_more{margin-left: 15px;}
