--- a/chan1/index.css
+++ b/chan1/index.css
@@ -1,5 +1,5 @@
 *{margin: 0; padding: 0;list-style: none;}
-body{background: #f0f0f0
+body{background: #f0f0f0;user-select: none;
 }
 .wrap{width: 1000px;height: 1080px;background: white;margin: 0 auto;}
 #wrap_header{width: 1000px;height: 126px;margin: 0 auto;}
@@ -8,11 +8,11 @@ body{background: #f0f0f0
 .menu_1{float: left;width: 400px;height: 84px;}
 a{text-decoration: none;color:#444444;}
 .box{float: right;width: 66px;height:32px;text-align: center;font-size: 12px;line-height: 34px;border: 1px solid #EFEFEF;
-         margin-top: 33px;
-     }
+    margin-top: 33px;
+}
 .search{float: right;width: 190.5px;height: 35px;margin-top: 33px;}
 .img_button{background: url("img/search.PNG") no-repeat;
-         border: none;width: 34px;height: 34px;cursor: pointer;}
+    border: none;width: 34px;height: 34px;cursor: pointer;}
 input{color: #444444;width: 150px;height: 32px;float: left;border: #EFEFEF 1px solid;text-indent: 10px;}
 .header_2{width: 1000px;height: 40px;border-bottom: 1px solid #e2e2e2;}
 
@@ -21,14 +21,15 @@ nav > ul{float: left;}
 nav > ul > li > a{font-weight: bold;}
 nav > ul > li > ul > li > a:hover{color: #7bc9dd;font-weight: bold;}
 nav > ul > li:hover > ul > li{height: 41px;}
+nav > ul > li:hover > a{color: #4d87ef;}
 nav > ul > li:hover > ul {border: #7bc9dd 1px solid;}
 nav > ul > li{width: 100px;height: 41px;float: left;line-height: 41px;text-align: center;}
-nav > ul > li > ul{width: 120px;font-size: 13px;text-align: left;background: white;}
-nav > ul > li > ul > li{width: 100px;margin-left: 20px;height: 0px;overflow: hidden;}
+nav > ul > li > ul{width: 150px;font-size: 12px;text-align: left;background: white;}
+nav > ul > li > ul > li{width: 100px;margin-left: 10px;height: 0px;overflow: hidden;}
 nav > ul > li > ul > li > a{color: #444444;}
 
 .table_all{width: 700px;height: 200px;border:1px solid #e2e2e2;margin-top: 10px;float: left;margin-left: 5px;}
-.content_wrap{width: 1000px;height: 750px;}
+.content_wrap{width: 1000px;height: 730px;}
 .slide_box{width: 1000px;height: 300px;overflow: hidden;position: relative;margin-top: 10px;}
 .slide_box > li{height: 300px;width: 1000px;position: absolute;left: -1000px;}
 .slide_box > li > img{width: 1000px;height: 300px;position: absolute;}
@@ -38,9 +39,10 @@ nav > ul > li > ul > li > a{color: #444444;}
 .table_1 > thead > tr > .plus_view{width: 60px;height:25px;left: 400px;position: relative;line-height: 25px;border-bottom: 1px solid #e2e2e2;}
 .table_1 > thead > tr > .plus_view > a{font-size: 12px;color: #444444;}
 .table_1 > thead > tr > th {width: 100px;float: left;}
-.table_1 > thead > tr > th > a{font-size: 18px;color: black;}
+.table_1 > thead > tr > th {font-size: 18px;color: black;}
 .table_1 > tbody > tr > td > a{font-size: 14px;}
-
+.th_1{cursor: pointer;}
+.th_2{cursor: pointer;}
 #h_t{width: 700px;height: 200px;display: none;position: absolute}
 
 #pop_box{width: 285px;height: 412px;float: right;margin-top: 10px;overflow: hidden;position: relative;border: 1px solid #e2e2e2;}
@@ -48,16 +50,18 @@ nav > ul > li > ul > li > a{color: #444444;}
 #pop_box > li:first-child {left: 0;}
 #pop_box > li > img{width: 285px;height: 412px;}
 #pop_box > li > a > img {width: 285px;height: 412px;}
+
 .del_box {width: 100%;height: 100%;position: absolute;z-index: 3;text-align: center;display: none;}
-.del_box img {width: 380px;height: 500px;}
-.del{width: 20px;height: 20px;background-color: #e2e2e2;position: relative;border:#b3b3b3; float: right;top: 20px;}
-.del>a{color: #ffffff}
-.del2{width: 380px;height: 500px;margin-top: 200px;margin: 0 auto;margin-top: 250px;}
+.del_box > .del2 > .box1 >img {width: 500px;height: 380px;margin-top: 20px;float: left;margin-left: 50px;}
+.del_box > .del2{width: 600px;height: 450px;background: white;border: 1px solid black;margin: 0 auto;margin-top: 250px;}
+.del_box > .del2 >.box1{width: 600px;height: 400px;}
+.del{width: 40px;height: 30px;background-color: #e2e2e2;position: relative;border:1px solid #b3b3b3; top: 11px;}
+.del > a{color: #ffffff}
 #th_color1{color: #4d87ef;}
 .right{font-size: 14px;text-align: center;}
 
 .gallery{float: left;width: 700px;height: 200px; margin-top: 10px;margin-left: 5px;}
-.calender{float: left;width: 343px;height: 200px; border:1px solid #e2e2e2;user-select: none;}
+.calender{float: left;width: 343px;height: 200px; border:1px solid #e2e2e2;}
 .c_t{width: 343px;height: 40px;}
 .c_year_date{font-size: 13px;color: #a5a5a5;}
 .c_t > p{text-align: center;font-weight: bold;}
@@ -70,6 +74,29 @@ nav > ul > li > ul > li > a{color: #444444;}
 .c_f > p{margin-left: 10px;}
 #b_b{border-bottom: 1px solid #e2e2e2;}
 .lunch{float: left;width: 343px;height: 200px; border:1px solid #e2e2e2;margin-left: 10px;}
+.l_t{width: 343px;height: 22px;text-align: center;font-weight: bold;}
+.lunch > .l_m{float: left;width: 323px;height: 150px;margin-top: 10px;margin-left: 10px;}
+.lunch > .l_m > img{width: 323px;height: 150px;cursor: pointer;}
+.lunch > .l_b {width: 343px;height: 22px;font-size: 13px;text-align: center;float: left;}
 .button{cursor: pointer;font-size:25px;color: #b3b3b3;}
 .button:hover{color: #4d87ef;}
 #m_more{margin-left: 15px;}
+
+.footer{width: 1000px;height: 208px;margin-top: 10px;}
+.f_topbox{width: 1000px;height: 52px;}
+.f_t{width: 800px;height: 50px;border: 1px solid #e2e2e2;margin: 0 auto;}
+.f_t > ul > li{width: 150px;height: 52px;float: left;}
+.f_t > ul{width: 750px;height: 50px;margin: 0 auto;}
+.f_t > ul > li >img {width: 150px; height: 50px;display: inline-block;}
+
+.f_bottombox{width: 1000px;height: 140px;border-top: 1px solid #e2e2e2;margin-top: 15px;}
+.f_btopbox{float: left;width: 1000px;height: 60px;border-bottom: 1px solid #e2e2e2;}
+.f_btopbox > img{float: left;width: 240px;height: 50px;padding-left: 100px;padding-top: 5px;}
+.fbox_1{width: 500px;float: right;height: 60px;line-height: 60px;}
+.fbox_1 > a{color: #767676;font-size: 13px;font-weight: bold;}
+.red_1{color: red;}
+.f_bbottombox{height: 60px;width: 500px;float:right;padding-top: 10px;}
+.font_gray{font-size: 13px;color: #919191;}
+.font_Copyright{font-size: 13px;font-weight: bold;color: #767676;}
+
+
