--- a/chanwoong/css/index.css
+++ b/chanwoong/css/index.css
@@ -30,10 +30,10 @@ nav > ul > li > ul > li > a{color: #444444;}
 
 .table_all{width: 700px;height: 200px;border:1px solid #e2e2e2;margin-top: 10px;float: left;margin-left: 5px;}
 .content_wrap{width: 1000px;height: 730px;}
-.slide_box{width: 1000px;height: 300px;overflow: hidden;position: relative;margin-top: 10px;}
-.slide_box > li{height: 300px;width: 1000px;position: absolute;left: -1000px;}
-.slide_box > li > img{width: 1000px;height: 300px;position: absolute;}
-.slide_box > li:first-child{left: 0;}
+.slider_continer{float:left;width: 1000px;height: 300px;overflow: hidden;position: relative;margin-top: 10px;}
+.slide_box{width: 300%;height: 300px;float: left;position: absolute;}
+.slide_box > li{height: 300px;width: 1000px;float: left;}
+.slide_box > li > img{width: 1000px;height: 300px;float: left;}
 .table_box{width: 700px;height: 200px;}
 .table_1{width: 700px;height: 200px;}
 .plus_view > a{width: 60px;height:25px;position: absolute;line-height: 25px;border-bottom: 1px solid #e2e2e2;font-size: 12px;color: #444444;margin-left: 565px;}
@@ -113,11 +113,11 @@ dd > input{width: 400px;height: 38px;}
 #bt{height: 120px;padding-top: 40px;}
 #ok{width: 400px;height: 60px;margin: 0  auto;background: #4d87ef;border:#4d87ef;font-size:20px;color: white;display: block;padtop: 20px;}
 #box > img {padding-top: 30px;}
-#right_button {float: right;}
+#next {float: right;}
 .button_s{z-index: 1;line-height: 300px;width: 500px;height: 300px;float: left;}
 .button_s > a{font-size: 40px;color: white;}
 #button_box{position: absolute;width: 1000px;height: 300px;z-index: 1;}
 
 .main_slide{position: relative;width: 1000px;height: 300px;overflow: hidden;}
 #subnav{position: absolute;bottom: 10px;left: 10px;z-index: 999;}
-#subnav > li{width: 15px;height: 15px;border-radius: 50%;background: rgb(170,170,170);float: left;cursor: pointer;margin: 0 2px;}
+#subnav > li{width: 13px;height: 13px;border-radius: 50%;border:4px solid white;float: left;cursor: pointer;margin: 0 2px;}
